--- a/Client/src/sass/main.scss
+++ b/Client/src/sass/main.scss
@@ -4,4 +4,5 @@
 @import './../page/Home/home';
 @import './../components/Home/BootcampProgressCard/bootcampProgressCard';
 @import './../page/CreateBootcamp/createBootcamp';
-@import './../page/Login/login'
+@import './../page/Login/login';
+@import './../components/UserBootcamp/userBootcamp'
