--- a/Client/src/sass/main.scss
+++ b/Client/src/sass/main.scss
@@ -5,4 +5,4 @@
 @import './../components/Home/BootcampProgressCard/bootcampProgressCard';
 @import './../page/CreateBootcamp/createBootcamp';
 @import './../page/Login/login';
-@import './../components/UserBootcamp/userBootcamp'
+@import './../components/UserBootcamp/userBootcamp';
